# Decentralized-File-Storage

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  _project_config.py  build.py  commands.txt  nx.json  package-lock.json  package.json  project_setup.sh  requirements.txt  test_fileencrypt  test_filesplit.py  test_python_file_encrypt_decrypt.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
apps/client-ui/: jest.config.ts  project.json  rspack.config.ts
apps/client-ui-e2e/: playwright.config.ts  project.json
apps/client-ui/src/: index.html
apps/client-ui/src/app/: app.component.spec.ts  app.component.ts  nx-welcome.component.ts
apps/tracker-ui/: jest.config.ts  project.json  rspack.config.ts
apps/tracker-ui-e2e/: playwright.config.ts  project.json
apps/tracker-ui/src/: index.html
apps/tracker-ui/src/app/: app.component.spec.ts  app.component.ts  nx-welcome.component.ts
client-core/: CMakeLists.txt
client-core/include/: chunk_metadata.hh  sequential_file_splitter.hh  stream_encrypt_decrypt.hh  util.hh
client-core/src/: chunk_transmitter.cc  sequential_file_splitter.cc  stream_encrypt_decrypt.cc  test.cc  util.cc
client-core/test/: test.cc  test_endian.cc  test_file_reconst_unenc.cc
client-ui/: README.md  angular.json  package-lock.json  package.json
client-ui/src/app/: app.component.ts
debug/: test_filedecrypt  test_fileencrypt
demo-client/: CMakeLists.txt
demo-client/src/: main.cc
demo-registry/: package-lock.json  package.json  registry.js
demo-server/: CMakeLists.txt
demo-server/src/: main.cc
dfs/: CMakeLists.txt
dfs-core/: CMakeLists.txt  diagnostics.cc  fibonacci_heap.hh  sequential_file_splitter.cc  sequential_file_splitter.hh  test_file_reconst_unenc.cc  test_log.cc  thread_pool.cc  thread_pool.hh  util.hh
dfs-core/include/: dfs-core.hh
dfs-crypto/: CMakeLists.txt  stream_encrypt_decrypt.cc  stream_encrypt_decrypt.hh  test.cc  test_new_enc_dec.cc  test_split_reconst.cc
dfs-crypto/include/: dfs-crypto.hh
dfs-net/: CMakeLists.txt  chunk_ingestor.cc  chunk_transmitter.cc  chunk_transmitter.hh  test_client.cc  test_server.cc
dfs-net/include/: dfs-net.hh
dfs-storage/: CMakeLists.txt  ORM_README.md  db.cc  db.hh  dto.hh  key_val_store.hh  orm.cc  orm.hh  repository.hh  test_orm.cc  test_repository.cc
dfs-storage/include/: dfs-storage.hh
dfs/include/: chunk_ingestor.hh  chunk_metadata.hh  chunk_transmitter.hh  dfs.hh  diagnostics.hh  fibonacci_heap.hh  logger.hh  sequential_file_splitter.hh  stream_encrypt_decrypt.hh  util.hh
dfs/src/: chunk_ingestor.cc  chunk_transmitter.cc  fibonacci_heap.cc  logger.cc  sequential_file_splitter.cc  stream_encrypt_decrypt.cc  util.cc
dfs/test/: test.cc  test_client.cc  test_file_reconst_unenc.cc  test_log.cc  test_new_enc_dec.cc  test_server.cc  test_split_reconst.cc
dfs_storage_node/: storage_node.py
dfs_tracking_server/: development-db.sqlite3  manage.py
dfs_tracking_server/dfs_tracking_server/: settings.py  urls.py
dfs_tracking_server/user_management/: serializers.py
dfs_tracking_server/user_management/migrations/: 0001_initial.py  0002_remove_userprofile_phone_no_userprofile_phone_number.py
dfs_user_client/: filesplit.py  filetransfer_pb2_grpc.py  user_client.py
include/: filecopy.h  filesplit.h
include/dfs/: dfsexports.h  filedecrypt.h  fileencrypt.h  filesplit.h
include/dfspython/: python_file_encrypt_decrypt.h
infra/: dev.Dockerfile
legacy/: README.md
legacy/dfs_storage_node/: filetransfer_pb2.pyi
legacy/dfs_tracking_server/dfs_tracking_server/: asgi.py  settings.py  urls.py  wsgi.py
legacy/dfs_tracking_server/user_management/: models.py  urls.py  views.py
legacy/dfs_tracking_server/user_management/migrations/: 0003_alter_userprofile_bio.py
legacy/dfs_user_client/: filetransfer_pb2.py
legacy/dfs_user_client/client_storage/: decrypted.txt
legacy/dfs_user_client/client_storage/chunks/: key  nonce
legacy/dfs_user_client/client_storage/chunks/client_storage/: text1.txt_chunk_1  text1.txt_chunk_2  text1.txt_chunk_3
legacy/include/dfs/: filecopy.h
legacy/include/dfspython/: python_file_encrypt_decrypt.h
legacy/scripts/: test_fileencrypt
legacy/src/: filedecrypt.c  test_filedecrypt.c  test_fileencrypt.c
proto/: chunkcomm.proto
protos/: filetransfer.proto
res/: data.txt
scripts/: build_dfs-core-linux-with-python  clean-build.sh  test__setup  test_filedecrypt  test_python_file_encrypt_decrypt.py
src/: filecopy.c  filedecrypt.c  fileencrypt.c  filesplit.c  python_file_encrypt_decrypt.c  test_fileencrypt.c
storage-node-core/: CMakeLists.txt
storage-node-core/include/core/: db.hh  dto.hh
storage-node-core/src/: main.cc
storage-node-core/src/core/: db.cc
storage-node-core/test/: test_db_wrapper.cc  test_db_write.cc  test_sqlite3.cc
tracker-ui/: README.md  angular.json  package-lock.json  package.json
